--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
             </div>
         </div>
         <div id="content">
-            <p>
+            <p class="larger marginless">
                 This is not a real online service! You know you need something
                 like this in your life to help you realize tour deepest dreams.
-                Sign up <i>now</i> to get started.
             </p>
-            <p>You know <i>you</i> want to.</p>
+            <p class="larger marginless">Sign up <i>now</i> to get started.</p>
+            <p class="larger">You know <i>you</i> want to.</p>
 
             <form action="javascript:void(0);" method="post">
-                <h1>Let's do this!</h1>
-
                 <div class="main-form">
+                    <h1>Let's do this!</h1>
                     <div class="form-row">
                         <label for="user-fname">
                             FIRST NAME
@@ -48,7 +47,7 @@
                     </div>
                     <div class="form-row">
                         <label for="user-password">
-                            FIRST NAME
+                            PASSWORD
                             <input
                                 type="password"
                                 name="password"
@@ -56,7 +55,7 @@
                             />
                         </label>
                         <label for="user-password-confirm">
-                            FIRST NAME
+                            CONFIRM PASSWORD
                             <input type="text" id="user-password-confirm" />
                         </label>
                     </div>
@@ -64,7 +63,7 @@
                 <button type="submit">Create Account</button>
             </form>
 
-            Already have an account? <a href="#">Log in</a>
+            <p>Already have an account? <a href="#">Log in</a></p>
         </div>
     </body>
 </html>
