--- a/index.html
+++ b/index.html
@@ -27,36 +27,83 @@
                     <h1>Let's do this!</h1>
                     <div class="form-row">
                         <label for="user-fname">
-                            FIRST NAME
-                            <input type="text" name="fname" id="user-fname" />
+                            <span>
+                                FIRST NAME <span aria-label="required">*</span>
+                            </span>
+                            <input
+                                type="text"
+                                name="fname"
+                                id="user-fname"
+                                required
+                                placeholder="John"
+                            />
                         </label>
                         <label for="user-lname">
-                            LAST NAME
-                            <input type="text" name="lname" id="user-lname" />
+                            <span>
+                                LAST NAME <span aria-label="required">*</span>
+                            </span>
+                            <input
+                                type="text"
+                                name="lname"
+                                id="user-lname"
+                                required
+                                placeholder="Doe"
+                            />
                         </label>
                     </div>
                     <div class="form-row">
                         <label for="user-mail">
-                            EMAIL
-                            <input type="email" name="email" id="user-mail" />
+                            <span>
+                                EMAIL <span aria-label="required">*</span>
+                            </span>
+                            <input
+                                type="email"
+                                name="email"
+                                id="user-mail"
+                                required
+                                placeholder="john@doe.com"
+                            />
                         </label>
                         <label for="user-number">
                             PHONE NUMBER
-                            <input type="tel" name="number" id="user-number" />
+                            <input
+                                type="tel"
+                                name="number"
+                                id="user-number"
+                                placeholder="+123 4567 8901"
+                            />
                         </label>
                     </div>
                     <div class="form-row">
                         <label for="user-password">
-                            PASSWORD
+                            <span>
+                                PASSWORD <span aria-label="required">*</span>
+                            </span>
                             <input
                                 type="password"
                                 name="password"
                                 id="user-password"
+                                required
+                                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
+                                minlength="8"
+                                placeholder="********"
+                                title="Password has to contain at least an uppercase, lowercase and a number character and has to be more than 8 characters in length"
                             />
                         </label>
                         <label for="user-password-confirm">
-                            CONFIRM PASSWORD
-                            <input type="text" id="user-password-confirm" />
+                            <span>
+                                CONFIRM PASSWORD
+                                <span aria-label="required">*</span>
+                            </span>
+                            <input
+                                type="text"
+                                id="user-password-confirm"
+                                required
+                                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
+                                minlength="8"
+                                placeholder="********"
+                                title="Password has to contain at least an uppercase, lowercase and a number character and has to be more than 8 characters in length"
+                            />
                         </label>
                     </div>
                 </div>
