--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="index.css" />
-        <script src="index.js" defer></script>
+        <link rel="stylesheet" href="./index.css" />
+        <script src="./index.js" defer></script>
         <title>Document</title>
     </head>
     <body>
         <div id="image-container">
             <div class="logo">
-                <img src="/images/odin-lined.png" alt="Odin Logo" />
+                <img src="./images/odin-lined.png" alt="Odin Logo" />
                 <p>Odin</p>
             </div>
         </div>
@@ -24,7 +24,7 @@
             <p class="larger">You know <i>you</i> want to.</p>
 
             <form
-                action="/hell"
+                action="./hell"
                 method="post"
                 onsubmit="return checkPasswords()"
             >
